; ModuleID = '/home/carl/AnghaBench/freebsd/sys/mips/mediatek/extr_uart_dev_mtk.c_mtk_uart_getc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/mips/mediatek/extr_uart_dev_mtk.c_mtk_uart_getc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uart_bas = type { i32 }
%struct.mtx = type { i32 }

@UART_LSR_REG = common dso_local global i32 0, align 4
@UART_LSR_DR = common dso_local global i32 0, align 4
@UART_RX_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.uart_bas*, %struct.mtx*)* @mtk_uart_getc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @mtk_uart_getc(%struct.uart_bas* %0, %struct.mtx* %1) #0 {
  %3 = alloca %struct.uart_bas*, align 8
  %4 = alloca %struct.mtx*, align 8
  %5 = alloca i32, align 4
  store %struct.uart_bas* %0, %struct.uart_bas** %3, align 8
  store %struct.mtx* %1, %struct.mtx** %4, align 8
  %6 = load %struct.mtx*, %struct.mtx** %4, align 8
  %7 = call i32 @uart_lock(%struct.mtx* %6)
  br label %8

8:                                                ; preds = %16, %2
  %9 = load %struct.uart_bas*, %struct.uart_bas** %3, align 8
  %10 = load i32, i32* @UART_LSR_REG, align 4
  %11 = call i32 @uart_getreg(%struct.uart_bas* %9, i32 %10)
  %12 = load i32, i32* @UART_LSR_DR, align 4
  %13 = and i32 %11, %12
  %14 = icmp ne i32 %13, 0
  %15 = xor i1 %14, true
  br i1 %15, label %16, label %22

16:                                               ; preds = %8
  %17 = load %struct.mtx*, %struct.mtx** %4, align 8
  %18 = call i32 @uart_unlock(%struct.mtx* %17)
  %19 = call i32 @DELAY(i32 10)
  %20 = load %struct.mtx*, %struct.mtx** %4, align 8
  %21 = call i32 @uart_lock(%struct.mtx* %20)
  br label %8

22:                                               ; preds = %8
  %23 = load %struct.uart_bas*, %struct.uart_bas** %3, align 8
  %24 = load i32, i32* @UART_RX_REG, align 4
  %25 = call i32 @uart_getreg(%struct.uart_bas* %23, i32 %24)
  store i32 %25, i32* %5, align 4
  %26 = load %struct.mtx*, %struct.mtx** %4, align 8
  %27 = call i32 @uart_unlock(%struct.mtx* %26)
  %28 = load i32, i32* %5, align 4
  ret i32 %28
}

declare dso_local i32 @uart_lock(%struct.mtx*) #1

declare dso_local i32 @uart_getreg(%struct.uart_bas*, i32) #1

declare dso_local i32 @uart_unlock(%struct.mtx*) #1

declare dso_local i32 @DELAY(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
